--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=Movies-API
-spring.data.mongodb.database=${env.MONGO_DATABASE}
-spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${MONGO_CLUSTER}
+spring.data.mongodb.database=movie-api-db
+spring.data.mongodb.uri=mongodb+srv://ajinkya11880:pratik3949@cluster0.hnaen2z.mongodb.net
